remove dependências as de DTOs dos Casos de Uso